--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,29 +1,27 @@
 // Your footer style
 .footer {
-  display: flex;
   background: #282C2F;
   color: white;
+  display: flex;
   padding: 30px;
-}
-.footer li {
-  font-weight: bold;
-  font-size: 20px;
-}
 
-.footer p {
-  font-weight: lighter;
-  font-size: 15px;
-}
-.social ul {
-  align-items: center;
+  li {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  p {
+    font-size: 15px;
+    font-weight: lighter;
+  }
 }
 .social li {
-  float: right;
-  width: 35px;
-  height: 35px;
-  text-align: center;
-  line-height: 35px;
-  font-size: 20px;
   background: #33383B;
+  float: right;
+  font-size: 20px;
+  height: 35px;
+  line-height: 35px;
   margin-left: 10px;
+  text-align: center;
+  width: 35px;
 }
