--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,20 +1,18 @@
 .card {
-  height: 175px;
+  height: 190px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
+  background-position: center center;
   color: white;
   position: relative;
+  border-radius: 5px;
+  margin-bottom: 18px;
 }
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-.card-category {
+.card-city {
   position: absolute;
   top: 10px;
   left: 10px;
-  font-size: 10px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 .card-description {
@@ -22,12 +20,9 @@
   bottom: 10px;
   left: 10px;
 }
-.card-description h2 {
+.card-description h3 {
   font-size: 24px;
 }
-.card-description p {
-  font-size: 13px;
-  }
 .card-link {
   position: absolute;
   top: 0;
