--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,47 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
-  <div class="banner-content">
-    <h1>Some Stuff</h1>
-    <p>Very cool stuff, useful and smart</p>
-    <a class="btn btn-primary btn-lg">GET IT</a>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://lorempixel.com/output/nature-q-c-1024-768-2.jpg');">
+  <div class="container">
+    <div class="banner-content">
+      <h1>Yacht and Crew</h1>
+      <p>Book your yacht and have fun !</p>
+      <form class="form-inline" action="yacht/index">
+        <input type="text" name="city" placeholder="city" class="form-control">
+        <input type="text" name="max-capacity" placeholder="travellers" class="form-control">
+        <input type="submit" class="btn btn-primary">
+      </form>
+    </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Some stuff</h2>
-          <p>Very cool stuff, useful and smart</p>
+<div class="cards-wrapper padded">
+  <h2 class="text-center"> Your next yacht </h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://iyc.com/wp-content/uploads/2016/05/temptation-palmer-johnson-yacht-running.jpg');">
+          <div class="card-city"> ⚓ City</div>
+          <div class="card-description">
+            <h3>Yacht name</h3>
+          </div>
+          <a class="card-link" href="#" ></a>
+        </div>
       </div>
-  <img class="card-user avatar" src="user.jpg">
-  <a class="card-link" href="#" ></a>
-</div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCnkAVroXFElln2vsU1bgFqWhJshoMjFxmm1y_-7rcJ5iMnoaPJQ');">
+          <div class="card-city">⚓ City</div>
+          <div class="card-description">
+            <h3>Yacht name</h3>
+          </div>
+          <a class="card-link" href="#" ></a>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS-sNACNL8i7Ss3bp2DjvCvZM8LlG1Xu2hunzliHFulA4Alh4b');">
+          <div class="card-city">⚓ City</div>
+          <div class="card-description">
+            <h3>Yacht name</h3>
+          </div>
+          <a class="card-link" href="#" ></a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
