--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,22 +1,26 @@
 .banner {
-  color: white;
-  text-align: center;
-  height: 100vh;
-  /* if you have a 70px navbar => height: calc(100vh - 70px); */
-  background-size: cover !important;
-  background-attachment: fixed;
-  display: flex;
   align-items: center;
+  background-attachment: fixed;
+  background-size: cover !important;
+  color: white;
+  display: flex;
+  height: 100vh;
   justify-content: center;
+  text-align: center;
+  h1 {
+    font {
+      size: 50px;
+      weight: bold;
+    }
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  p {
+    color: rgba(255, 255, 255, 0.7);
+    font {
+      size: 20px;
+      weight: lighter;
+    }
+    margin-bottom: 20px;
+  }
 }
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-.banner p {
-  font-size: 20px;
-  font-weight: lighter;
-  color: rgba(255, 255, 255, 0.7);
-  margin-bottom: 20px;
-}
+
