--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,37 +1,37 @@
 .card {
-  height: 190px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center center;
-  color: white;
-  position: relative;
   border-radius: 5px;
+  color: white;
+  height: 190px;
   margin-bottom: 18px;
+  position: relative;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
 }
 .card-city {
-  position: absolute;
-  top: 10px;
-  left: 10px;
   font-size: 14px;
+  left: 10px;
+  position: absolute;
   text-transform: uppercase;
+  top: 10px;
 }
 .card-description {
-  position: absolute;
   bottom: 10px;
   left: 10px;
-}
-.card-description h3 {
+  position: absolute;
+  h3 {
   font-size: 24px;
+  }
 }
 .card-link {
-  position: absolute;
-  top: 0;
+  background: black;
   bottom: 0;
+  opacity: 0;
+  position: absolute;
   right: 0;
+  top: 0;
   width: 100%;
   z-index:2;
-  background: black;
-  opacity: 0;
 }
 .card-link:hover{
   opacity: 0.1;
