--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
           <div class="card-description">
             <h3>Yacht name</h3>
           </div>
-          <a class="card-link" href="#" ></a>
+          <%= link_to "", "#", class: "card-link" %>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
@@ -26,7 +26,7 @@
           <div class="card-description">
             <h3>Yacht name</h3>
           </div>
-          <a class="card-link" href="#" ></a>
+          <%= link_to "", "#", class: "card-link" %>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
@@ -35,7 +35,7 @@
           <div class="card-description">
             <h3>Yacht name</h3>
           </div>
-          <a class="card-link" href="#" ></a>
+          <%= link_to "", "#", class: "card-link" %>
         </div>
       </div>
     </div>
