--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,10 @@
 <div class="navbar-wagon">
-  <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
-    <img src="images/lewagon.png" />
-  </a>
+  <%= link_to root_path do %>
+    <%= image_tag "images/lewagon.png", class: "navbar-wagon-brand" %>
+  <% end %>
 
-  <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <!-- Search form -->
     <form action="" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
       <button type="submit" class="navbar-wagon-search-btn">
@@ -15,23 +12,18 @@
       </button>
     </form>
 
-    <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a>
-
-    <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "Contact", "#", class: 'navbar-wagon-item navbar-wagon-link'  %>
+    <%= link_to "Team", "#", class: 'navbar-wagon-item navbar-wagon-link'  %>
 
     <% if user_signed_in? %>
 
-    <!-- Notification link-->
-      <a href="" class="navbar-wagon-item navbar-wagon-link">
+      <%= link_to "#", class:"navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
           <i class="fa fa-envelope-o"></i>
           <div class="badge badge-blue">3</div>
         </div>
-      </a>
+      <% end %>
 
-      <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
           <%= image_tag "http://placehold.it/50x50", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
@@ -49,10 +41,8 @@
       <%= link_to "Sign Up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn"  %>
     <% end %>
 
-    <!-- Button (call-to-action) -->
   </div>
 
-  <!-- Dropdown appearing on mobile only -->
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
