navbar changed, color change and search bar deleted

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,17 +1,10 @@
 <div class="navbar-wagon">
 
   <%= link_to root_path do %>
-    <%= image_tag "images/lewagon.png", class: "navbar-wagon-brand" %>
+    <%= image_tag "http://paxgalaxy.com/WP/wp-content/uploads/2012/05/bateau-papier_600.png", class: "navbar-wagon-brand" %>
   <% end %>
 
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
-    <form action="" class="navbar-wagon-search">
-      <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
-      <button type="submit" class="navbar-wagon-search-btn">
-        <i class="fa fa-search"></i>
-      </button>
-    </form>
 
     <%= link_to "Contact", "#", class: 'navbar-wagon-item navbar-wagon-link'  %>
     <%= link_to "Team", "#", class: 'navbar-wagon-item navbar-wagon-link'  %>
