--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $main_color;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -20,8 +20,8 @@
 }
 
 /* Navbar logo */
-.navbar-wagon-brand img {
-  width: 50px;
+.navbar-wagon-brand {
+  width: 70px;
 }
 
 /* Navbar right section (with form, links, button) */
@@ -40,11 +40,19 @@
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: #616668;
+  // color: #616668;
+  color: white;
   font-size: 14px;
+  transition: background 0.3s ease;
+  transition: color 0.3s ease;
+  transition: padding 0.3s ease;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $main_color;
+  // color: #da552f;
+  background: white;
+  padding: 10px 20px;
+  border-radius: 10px;
   text-decoration: none;
 }
 
@@ -106,6 +114,7 @@
   border-color: #E6E6E6;
 }
 .navbar-wagon-dropdown-menu li > a {
+  background: white;
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
