--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -10,7 +10,7 @@
 }
 .card-city {
   font-size: 14px;
-  left: 10px;
+  right: 10px;
   position: absolute;
   text-transform: uppercase;
   top: 10px;
@@ -20,7 +20,16 @@
   left: 10px;
   position: absolute;
   h3 {
-  font-size: 24px;
+    font-size: 24px;
+    display: inline-block;
+  }
+  p {
+    font-size: 12px;
+    margin-bottom: 0;
+  }
+  span {
+    font-size: 12px;
+    display: inline-block;
   }
 }
 .card-link {
