--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,4 +1,4 @@
-<form class="form-inline" action="yacht/index">
+<form class="form-inline" action="yachts">
   <input type="text" name="city" placeholder="city" class="form-control">
   <input type="text" name="max_capacity" placeholder="travellers" class="form-control">
   <input type="submit" class="btn btn-primary">
