--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
+
+body {
+  position: relative;
+  padding-bottom: 130px;
+}
