--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -4,6 +4,10 @@
   color: white;
   display: flex;
   padding: 30px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   li {
     font-size: 20px;
