--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
     <% else %>
 
       <%= link_to "Login", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn"  %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn-primary"  %>
     <% end %>
 
   </div>
