New seed ok with background cloudinary yacht

--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -10,7 +10,7 @@
         <div class="row">
           <% @yachts.each do |yacht| %>
             <div class="col-md-6">
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://iyc.com/wp-content/uploads/2016/05/temptation-palmer-johnson-yacht-running.jpg');">
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path yacht.photo.path %>);">
               <div class="card-city"> ⚓ <%= yacht.location %></div>
               <div class="card-description">
                 <h3><%= yacht.name.capitalize %></h3>
