SHOW routes added + link to show

--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -17,14 +17,14 @@
                 <span><%= yacht.max_capacity %> travelers</span>
                 <p><%= yacht.description %></p>
               </div>
-              <%= link_to "", "#", class: "card-link" %>
+              <%= link_to "", yacht_path(yacht), class: "card-link" %>
               </div>
             </div>
           <% end %>
         </div>
           <div class="col-md-4">
             <div class="map">
-
+            <!-- FUTUR MAP  -->
             </div>
           </div>
         </div>
