Home page modified

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://lorempixel.com/output/nature-q-c-1024-768-2.jpg');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.3) 50%), url('https://static1.squarespace.com/static/58089b7846c3c44d6e2ac2c0/t/580f789ce6f2e1af3c2f0d49/1477408926813/PJ170-mail_Page_04.jpg?format=2500w');">
   <div class="container">
     <div class="banner-content">
       <h1>Yacht and Crew</h1>
@@ -7,33 +7,36 @@
     </div>
   </div>
 </div>
+
 <div class="cards-wrapper padded">
   <h2 class="text-center"> Your next yacht </h2>
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://iyc.com/wp-content/uploads/2016/05/temptation-palmer-johnson-yacht-running.jpg');">
-          <div class="card-city"> ⚓ City</div>
+          <div class="card-city"> ⚓ Arcachon</div>
           <div class="card-description">
-            <h3>Yacht name</h3>
+            <h3>Freedom</h3>
           </div>
           <%= link_to "", "#", class: "card-link" %>
         </div>
       </div>
+
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCnkAVroXFElln2vsU1bgFqWhJshoMjFxmm1y_-7rcJ5iMnoaPJQ');">
-          <div class="card-city">⚓ City</div>
+          <div class="card-city">⚓ Cannes</div>
           <div class="card-description">
-            <h3>Yacht name</h3>
+            <h3>Poseidon</h3>
           </div>
           <%= link_to "", "#", class: "card-link" %>
         </div>
       </div>
+
       <div class="col-xs-12 col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS-sNACNL8i7Ss3bp2DjvCvZM8LlG1Xu2hunzliHFulA4Alh4b');">
-          <div class="card-city">⚓ City</div>
+          <div class="card-city">⚓ Miami</div>
           <div class="card-description">
-            <h3>Yacht name</h3>
+            <h3>Belem</h3>
           </div>
           <%= link_to "", "#", class: "card-link" %>
         </div>
