--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,17 +9,16 @@
   text-align: center;
   h1 {
     font {
-      size: 50px;
+      size: 55px;
       weight: bold;
     }
-    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
   }
   p {
     color: rgba(255, 255, 255, 0.7);
-    font {
-      size: 20px;
-      weight: lighter;
-    }
+    font-size: 20px;
+    font-weight: normal;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.6);
     margin-bottom: 20px;
   }
 }
