--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,21 @@ body, html {
   /* Pad bottom by footer height */
   padding: 0 0 130px;
 }
+
+h3 {
+  font-size: 12px;
+}
+
+.help-block {
+  font-size: 12px;
+}
+
+.form_links {
+  text-decoration: none;
+  font-size: 12px;
+  color: #333;
+  &:hover {
+    text-decoration: none;
+    color: #333;
+  }
+}
