--- a/app/views/yachts/show.html.erb
+++ b/app/views/yachts/show.html.erb
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="col-md-4">
-
+        <%= render 'shared/booking_form' %>
       </div>
     </div>
   </div>
