--- a/app/views/shared/_booking_form.html.erb
+++ b/app/views/shared/_booking_form.html.erb
@@ -1,9 +1,12 @@
+<% content_for :after_js %>
 <div class="booking-form">
   <div>
     <%= simple_form_for [@yacht, @booking] do |f| %>
-      <%= f.input :guest_number, collection: (1..20).to_a, default: 1, label: "Number of peoples"  %>
-      <%= f.input :checkin, label: "From"%>
-      <%= f.input :checkout, label: "As" %>
+      <span id="unique_price"><%= @yacht.day_price %></span>
+      <%= f.input :guest_number, collection: (1..20).to_a, default: 1, label: "Travelers", id: 'travelers'  %>
+      <%= f.input :checkin, label: "From", html5: true %>
+      <%= f.input :checkout, label: "To", html5: true %>
+      <span id='price'></span>
       <div class="text-center">
         <%= f.submit class: 'btn btn-primary' %>
       </div>
