primary color changed

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -60,7 +60,7 @@
   color: white;
   text-decoration: none;
   color: #333;
-  background: white;
+  background: $main_color;
 }
 
 .navbar-wagon-search {
