Better form with animation loading with anchor

--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -4,3 +4,13 @@
   padding: 10px;
   border-radius: 5px;
 }
+#price {
+  padding: 5px;
+  margin: 20px 0;
+  display: block;
+  letter-spacing: 1.5px;
+  color: grey;
+}
+#unique_price {
+  display: none;
+}
