review view stylized

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="row">
       <div class="col-md-6 col-md-offset-3">
-      <div class="padded">
-        <h2>You can add your comment</h2>
+      <div class="padded text-center">
+        <h2> ⚓ Comment your <%= @yacht.name %> experience </h2>
+        <p> Please tell us about your experience with <%= @yacht.name %> and his crew.</p>
         <%= render 'review_form' %>
       </div>
     </div>
