Index Booking In construction (commit save maj)

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,7 +1,7 @@
 // Your footer style
 
 .footer {
-  background: #282C2F;
+  background: $main_color;
   color: white;
   display: flex;
   padding: 30px;
