--- a/app/assets/stylesheets/components/_booking_form.scss
+++ b/app/assets/stylesheets/components/_booking_form.scss
@@ -8,8 +8,9 @@
   padding: 5px;
   margin: 20px 0;
   display: block;
-  letter-spacing: 1.5px;
-  color: grey;
+  letter-spacing: 1.3px;
+  color: $brand_primary;
+  font-weight: bold;
 }
 #unique_price {
   display: none;
