--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -5,9 +5,13 @@
 
       <div class="col-md-8">
         <div id="search_form">
-          <%= render "shared/search_form" %>
+          <center><%= render "shared/search_form" %></center>
         </div>
         <div class="row">
+        <% if @yachts.size == 0 %>
+          <p class="text-center alert alert-info"> We are sorry, we have not yachts avalaible in the request location. You can use our service in the next ports: Arcachon et Cannes (FR)</p>
+          <div style="width:100%;height:0;padding-bottom:54%;position:relative;"><iframe src="https://giphy.com/embed/3ohA2ZD9EkeK2AyfdK" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+        <% else %>
           <% @yachts.each do |yacht| %>
             <div class="col-md-6">
               <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path yacht.photo.path %>);">
@@ -21,6 +25,7 @@
               </div>
             </div>
           <% end %>
+         <% end %>
         </div>
         </div>
         <div class="col-md-4">
