--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
 
 body, html {
   height: 100%;
+  font-weight: lighter;
 }
 
 #wrapper {
@@ -46,4 +47,8 @@ h3 {
     text-decoration: none;
     color: #333;
   }
+}
+
+.padded {
+  padding: 30px 0;
 }
