Signature app added

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,6 +10,9 @@
       </ul>
       <p> Yacht and Crew </p>
     </div>
+    <div>
+      <p id='signature'>App made by Appoline Sentucq, Denis Giraud, Adalberto Gonzalez & Mendy Dihars</p>
+    </div>
   </div>
   <div class="col-md-6">
     <ul class="list-inline social">
